For the 3d element as it fixed and with aligned to the img without leavi

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,10 +85,10 @@ body {
 .glass-border {
     @apply border border-transparent bg-clip-padding;
     border-image: linear-gradient(to right, #33ff99, #7226FF, #F042FF, #87F5F5) 1;
-    box-shadow: 0 0 20px 0px hsl(var(--primary)/0.5);
+    box-shadow: 0 0 25px 0px hsl(var(--primary)/0.6), 0 0 15px -5px hsl(var(--destructive)/0.5);
 }
 
 .dark .glass-border {
     border-image: linear-gradient(to right, #33ff99, #7226FF, #F042FF, #87F5F5) 1;
-    box-shadow: 0 0 20px 0px hsl(var(--primary)/0.5);
+    box-shadow: 0 0 25px 0px hsl(var(--primary)/0.6), 0 0 15px -5px hsl(var(--destructive)/0.5);
 }
